# rust-embassy-playground

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: cancom.rs  main.rs  measure.rs
stm32-g431k-example/: Cargo.toml
stm32-g431k-example/src/: main.rs
