[package]
name = "rust-embassy-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.4.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.1" }
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "time-driver-any", "stm32g431kb", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
embedded-hal = { version = "0.2.7" }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
heapless = { version = "0.8.0", default-features = false }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "90e96d281f87efdbea3a1418f5354f14386a42e8" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "90e96d281f87efdbea3a1418f5354f14386a42e8" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "90e96d281f87efdbea3a1418f5354f14386a42e8" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "90e96d281f87efdbea3a1418f5354f14386a42e8" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "90e96d281f87efdbea3a1418f5354f14386a42e8" }

[profile.dev]
lto = "fat"
opt-level = "s"
codegen-units = 1
debug = 2

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
debug = 0
