[package]
name = "rust-embassy-playground"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "stm32-g431k-example",
]

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
defmt = { version = "0.3.5" }
defmt-rtt = { version = "0.4.0" }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.1" }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "time-driver-any", "memory-x", "unstable-pac", "exti"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embedded-hal = { version = "1.0.0" }
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
heapless = { version = "0.8.0", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
static_cell = "2.0.0"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "e0f0430e2cb04f373f3e93e7abd27eba39d3eb7f" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "e0f0430e2cb04f373f3e93e7abd27eba39d3eb7f" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "e0f0430e2cb04f373f3e93e7abd27eba39d3eb7f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "e0f0430e2cb04f373f3e93e7abd27eba39d3eb7f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e0f0430e2cb04f373f3e93e7abd27eba39d3eb7f" }

[profile.dev]
lto = "fat"
opt-level = "s"
codegen-units = 1
debug = 2

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
debug = 0
